--- a/src/assets/css/warehouse.css
+++ b/src/assets/css/warehouse.css
@@ -125,7 +125,6 @@
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(5px);         
@@ -141,10 +140,48 @@
     background-color: rgb(154, 153, 163);
     padding: 2rem;
     border-radius: 10px;
+    height: 50%;
+    overflow-y: scroll;
     width: 90%;
-    max-width: 400px;
+    max-width: 60%;
     box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-    text-align: center;
+    text-align:center;
+    align-items: center;
+    animation: popFadeIn 0.3s ease-out;
+  }
+  .mid-body form{
+    display: grid;
+    text-align: left;
+    grid-template-columns: 300px;
+    justify-content: center;
+  }
+
+  .bulk_pop_up{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(5px);         
+    -webkit-backdrop-filter: blur(5px);  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  }
+  .bulk_pop_sub{
+    background-color: rgb(244, 245, 255);
+    padding: 2rem;
+    border-radius: 10px;
+    height: 50vh;
+    overflow-y: scroll;
+    width: 50%;
+    max-width: 60%;
+    box-shadow: 0 4px 15px rgb(37, 25, 87);
+    text-align:center;
+    align-items: center;
+    align-content: center;
     animation: popFadeIn 0.3s ease-out;
   }
 
